--- a/client/pyproject.toml
+++ b/client/pyproject.toml
@@ -5,10 +5,12 @@ description = ""
 authors = ["Jan Zborowski <janzborowski99@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7,<3.11"
 flwr = "^0.17.0"
+tensorflow = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
+black = "^21.12b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
