Run compose as stack in swarm mode

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,5 +15,7 @@ RUN pip3 install poetry
 RUN poetry config virtualenvs.create false
 RUN poetry install
 
+RUN python client/get_dataset.py
+
 RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
