--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,71 +3,25 @@ version: '3.4'
 services:
   server:
     build: ./server
+    image: 127.0.0.1:5000/server
+    env_file:
+      - ./server/.env.example
     environment:
-      - FRACTION_FIT=0.5
-      - NUM_OF_CLIENTS=5
-      - NUM_ROUNDS=10
-      - SERVER_ADDRESS=server:8080
+      - SERVER_ADDRESS=0.0.0.0:8080
     ports:
       - "8080:8080"
     command: python server/main.py
-  client1:
+  client:
     build: ./client
+    image: 127.0.0.1:5000/client
+    env_file:
+      - ./client/.env.example
     environment:
-      - BATCH_SIZE=32
-      - CLIENT_ID=1
-      - EPOCHS=5
-      - NUM_OF_CLIENTS=5
+      - CLIENT_ID={{.Task.Slot}}
+      - MAX_NUM_OF_CLIENTS=20
       - SERVER_ADDRESS=server:8080
-      - STEPS_PER_EPOCH=10
     command: python client/main.py
-    depends_on:
-      - server
-  client2:
-    build: ./client
-    environment:
-      - BATCH_SIZE=32
-      - CLIENT_ID=2
-      - EPOCHS=5
-      - NUM_OF_CLIENTS=5
-      - SERVER_ADDRESS=server:8080
-      - STEPS_PER_EPOCH=10
-    command: python client/main.py
-    depends_on:
-      - server
-  client3:
-    build: ./client
-    environment:
-      - BATCH_SIZE=32
-      - CLIENT_ID=3
-      - EPOCHS=5
-      - NUM_OF_CLIENTS=5
-      - SERVER_ADDRESS=server:8080
-      - STEPS_PER_EPOCH=10
-    command: python client/main.py
-    depends_on:
-      - server
-  client4:
-    build: ./client
-    environment:
-      - BATCH_SIZE=32
-      - CLIENT_ID=4
-      - EPOCHS=5
-      - NUM_OF_CLIENTS=5
-      - SERVER_ADDRESS=server:8080
-      - STEPS_PER_EPOCH=10
-    command: python client/main.py
-    depends_on:
-      - server
-  client5:
-    build: ./client
-    environment:
-      - BATCH_SIZE=32
-      - CLIENT_ID=5
-      - EPOCHS=5
-      - NUM_OF_CLIENTS=5
-      - SERVER_ADDRESS=server:8080
-      - STEPS_PER_EPOCH=10
-    command: python client/main.py
+    deploy:
+      replicas: 3
     depends_on:
       - server
